refactor(board)：将地块上的停留提示移动到它们各自的类里。